# iot-attestation-system

./: README.md
docs/videos/: ECDAA demo.mkv  enrollment demo.mkv  system demo.mkv
edge/edge_device/: Cargo.toml
edge/edge_device/src/: main.rs
edge/gateway_device/: Cargo.toml
edge/gateway_device/src/: main.rs
edge/gateway_device/src/mqtt/: async_subscribe.rs  mod.rs
edge/gateway_device/src/routes/: esdca_routes.rs  general_routes.rs  mod.rs
edge/gateway_device/src/tpm/: ec_enum.rs  ecdaa.rs  ecdsa.rs  mod.rs  primary_key.rs  signature.rs
infrastructure/broker/: compose.yml
infrastructure/broker/mosquitto/config/: mosquitto.conf
scripts/: SignVerify.ipynb  join.ipynb  main.py
services/attestation_server/: .env.example  Cargo.toml  compose.yml
services/attestation_server/src/: main.rs
services/attestation_server/src/cryptography/: crypto.rs  error.rs
services/attestation_server/src/routes/: auth_routes.rs  user_routes.rs
services/attestation_server/src/user/: user.rs
