[package]
name = "gateway_device"
version = "0.1.0"
edition = "2024"

[dependencies]
tss-esapi = { git = "https://github.com/kb-022/rust-tss-esapi", branch = "ecdaa" }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json","blocking"] }
futures = "0.3.31"
env_logger = "0.11.8"
async-std = "1.13.2"
paho-mqtt = "0.13.3"
