[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
p256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres","runtime-async-std-rustls","macros"]}
dotenv = "0.15.0"
getrandom = "0.3.4"
